# bridge-buddy

./: .gitignore  .space.kts  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: bidder.rs  card.rs  contract.rs  deal.rs  error.rs  evaluator.rs  game_manager.rs  hand.rs  lib.rs  score.rs  table.rs  table_master.rs  util.rs
core/src/actors/: game_client.rs  game_manager.rs  mod.rs  table.rs
core/src/actors/game_client/: auto_game_client.rs  mod.rs
core/src/bid_analyzer/: bid_rule.rs  bidding_situation.rs  mod.rs  situation_mapper.rs  situation_rule.rs
core/src/bid_analyzer/hand_info/: mod.rs  ranges.rs  suit_quality.rs
core/src/bid_reader/: bid_rule.rs  mod.rs  situation_mapper.rs  situation_rule.rs
core/src/bidding_situation/: mod.rs  situation_finder.rs  situation_rule.rs
core/src/card/: denomination.rs  mod.rs  suit.rs
core/src/dds/: card_manager.rs  dds_state.rs  dds_trick_manager.rs  double_dummy_result.rs  double_dummy_solver.rs  double_dummy_state.rs  mod.rs  relative_card.rs  relative_rank.rs
core/src/dds/card_manager/: card_tracker.rs  mod.rs  relative_tracker.rs  suit_field.rs  suit_tracker.rs
core/src/dds/card_tracker/: mod.rs
core/src/dds/played_cards_tracker/: mod.rs
core/src/engine/: auto_move_finder.rs  engine_state.rs  evaluator.rs  mock_bridge_engine.rs  mod.rs
core/src/engine/bidding/: mock.rs  mod.rs
core/src/engine/bidding_engine/: mock_bidding_engine.rs  mod.rs
core/src/engine/card_play/: mock.rs  mod.rs
core/src/engine/card_play_engine/: mock_card_play_engine.rs  mod.rs
core/src/engine/hand_evaluation/: mod.rs
core/src/engine/subjective_game_view/: mod.rs  subjective_axis.rs  subjective_seat.rs  subjective_trick.rs  (+2 more)
core/src/engine_context/: mod.rs  vulnerability.rs
core/src/evaluator/: mod.rs
core/src/game/: bid_manager.rs  card_manager.rs  game_event.rs  game_manager.rs  game_phase.rs  game_state.rs  hand_manager.rs  mod.rs  player_event.rs  scoring.rs  trick_manager.rs
core/src/game_context/: mod.rs  turn_rank.rs
core/src/impossible_book/: andrews.rs  helper.rs  mod.rs  pavlicek.rs
core/src/interactive/: cli_bid_finder.rs  cli_bid_selector.rs  cli_bidder.rs  cli_card_finder.rs  cli_card_selector.rs  cli_game_client.rs  cli_move_finder.rs  cli_move_selector.rs  cli_player.rs  cli_presenter.rs  mod.rs
core/src/player/: auto_player.rs  cli_player.rs  engine.rs  mod.rs
core/src/presentation/: mod.rs
core/src/primitives/: bid_line.rs  card.rs  contract.rs  deal.rs  deck.rs  denomination.rs  game_event.rs  game_result.rs  hand.rs  mod.rs  player_event.rs  score.rs  suit.rs  trick.rs
dds/: Cargo.toml  build.rs
dds/benches/: ddr.rs  suit_field.rs
dds/src/: double_dummy_solver.rs  lib.rs  readme.md
dds/src/card_manager/: card_tracker.rs  mod.rs  suit_field.rs
dds/src/dds/: dds_config.rs  dds_move.rs  double_dummy_result.rs  double_dummy_solver.rs  double_dummy_state.rs  mod.rs  move_generator.rs  transposition_table.rs  virtual_game_view.rs  virtual_state.rs
dds/src/dds_config/: mod.rs
dds/src/double_dummy_solver/: dds_statistics.rs  double_dummy_result.rs  double_dummy_runner.rs  mod.rs
dds/src/move_generator/: dds_move.rs  leading.rs  mod.rs  playing_last.rs  playing_second.rs  playing_third.rs
dds/src/primitives/: dds_move.rs  double_dummy_result.rs  mod.rs  virtual_card.rs
dds/src/state/: distribution_field.rs  double_dummy_state.rs  mod.rs  virtual_card.rs  virtual_card_tracker.rs  virtual_state.rs  virtualizer.rs
dds/src/transposition_table/: mod.rs
dds/src/trick_estimations/: losing_tricks.rs  mod.rs  quick_tricks.rs
src/: lib.rs  (+5 more)
webapp/: Cargo.toml  index.html
webapp/src/: main.rs
(+66 files in other folders)
