[package]
name = "bridge-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rand = "0.8.5"
strum = { version = "0.24", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
test-case = "3.1.0"
