[package]
name = "bridge-buddy-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
rand_chacha = "0.3.1"
log = { version = "0.4.20", features = [] }
env_logger = { version = "0.10.1", features = [] }

[dev-dependencies]
test-case = "3.1.0"
